Migrate to SpringBoot 3.3.x + Java 21 and update related dependencies (#775)